--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,3 +32,6 @@ qychat:
     secret: 1jCvYfSyNF2gYeRT6gxNz9_1RK7GNY8mv6-26JrOjK0
     limit: 1000
     timeout: 30
+  customer:
+    corpid: ${qychat.chatdata.corpid}
+    secret: pEie4lS2rB2KtWKcFfC389BHP7Z_ynWYn1UkjWMvlG4
