--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,14 +1,14 @@
 spring:
   datasource:
-    url: jdbc:mysql://192.168.88.2/qychat_archive?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://127.0.0.1/qychat_archive?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=Asia/Shanghai
     username: usercenter
-    password: 1332@ANCH.com
+    password: admini
 
 redis:
   model: standalone
-  host: 192.168.88.32
+  host: 127.0.0.1
   port: 6379
-  password: Pp.51idc.com
+  password: admini
   database: 0
 
 qychat:
